Fixing title and tagline stuck to left on Left vertical

--- a/inc/pro/assets/css/front.css
+++ b/inc/pro/assets/css/front.css
@@ -428,11 +428,6 @@ body.eighteen-tags-pro-active .site-header-cart li a {
 		margin-right: 0.7em;
 	}
 
-	.etp-nav-styleleft-vertical #page .site-header .custom-logo-link {
-		margin-bottom: 2em;
-		padding: 0 1em;
-	}
-
 	.etp-nav-styleleft-vertical .etp-nav-search .search-form {
 		display: block;
 		position: relative;
